[package]
authors = ["Oya-Tomo <oyatomo.dev@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "wavier-keys"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"

embedded-hal = "0.2"
stm32l4xx-hal = { version = "0.7.1", features = ["rt", "stm32l432", "stm32-usbd", "otg_fs"]}
stm32-usbd = "0.6.0"

usb-device = "0.2.9"
usbd-hid = "0.6.1"
usbd-hid-device = "0.1.0"


[[bin]]
name = "wavier-keys"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
